<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="380dp"
        android:text="@string/restart_shuffle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Turn On / Off BGM"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="450dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="479dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Moves :"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="462dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="350dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="462dp"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="350dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="317dp"
        android:layout_height="314dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="40dp">

        <LinearLayout
            android:layout_width="299dp"
            android:layout_height="99dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/_1"
                app:srcCompat="@drawable/pic1" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/_2"
                app:srcCompat="@drawable/pic2" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/_3"
                app:srcCompat="@drawable/pic3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="299dp"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/_4"
                app:srcCompat="@drawable/pic4" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/_5"
                app:srcCompat="@drawable/pic5" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/_6"
                app:srcCompat="@drawable/pic6" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/_7"
                app:srcCompat="@drawable/pic7" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/_8"
                app:srcCompat="@drawable/pic8" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/_9"
                app:srcCompat="@drawable/white" />
        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>